--- a/CSS/globals.css
+++ b/CSS/globals.css
@@ -32,108 +32,110 @@
 
 /* grid system */
 
-.page {
-  display: flex;
-  flex-direction: column;
-  gap: 8rem;
-  flex: 1 1 0%;
-}
+@layer components {
+  .page {
+    display: flex;
+    flex-direction: column;
+    gap: 8rem;
+    flex: 1 1 0%;
+  }
 
-.lib-grid {
-  --grid-m: min(var(--screen-m), 100% - var(--gap) * 2);
-  --grid-l: minmax(0, calc((var(--screen-l) - var(--screen-m)) / 2));
-  --grid-xl: minmax(0, calc((var(--screen-xl) - var(--screen-l)) / 2));
-  --grid-full: minmax(var(--gap), 1fr);
+  .lib-grid {
+    --grid-m: min(var(--screen-m), 100% - var(--gap) * 2);
+    --grid-l: minmax(0, calc((var(--screen-l) - var(--screen-m)) / 2));
+    --grid-xl: minmax(0, calc((var(--screen-xl) - var(--screen-l)) / 2));
+    --grid-full: minmax(var(--gap), 1fr);
 
-  display: grid;
-  grid-template-columns:
-    [full-start] var(--grid-full)
-    [xl-start] var(--grid-xl)
-    [l-start] var(--grid-l)
-    [m-start] var(--grid-m) [m-end]
-    var(--grid-l) [l-end]
-    var(--grid-xl) [xl-end]
-    var(--grid-full) [full-end];
-}
+    display: grid;
+    grid-template-columns:
+      [full-start] var(--grid-full)
+      [xl-start] var(--grid-xl)
+      [l-start] var(--grid-l)
+      [m-start] var(--grid-m) [m-end]
+      var(--grid-l) [l-end]
+      var(--grid-xl) [xl-end]
+      var(--grid-full) [full-end];
+  }
 
-.lib-grid > * {
-  grid-column: m-start / m-end;
-}
+  .lib-grid > * {
+    grid-column: m-start / m-end;
+  }
 
-.lib-grid-m {
-  grid-column: m-start / m-end;
-}
+  .lib-grid-m {
+    grid-column: m-start / m-end;
+  }
 
-.lib-grid-l {
-  grid-column: l-start / l-end;
-}
+  .lib-grid-l {
+    grid-column: l-start / l-end;
+  }
 
-.lib-grid-xl {
-  grid-column: xl-start / xl-end;
-}
+  .lib-grid-xl {
+    grid-column: xl-start / xl-end;
+  }
 
-/* background */
+  /* background */
 
-.bg-light {
-  @apply bg-gray-100 dark:bg-gray-950;
-  @apply text-gray-950 dark:text-gray-100;
-}
+  .bg-light {
+    @apply bg-gray-100 dark:bg-gray-950;
+    @apply text-gray-950 dark:text-gray-100;
+  }
 
-.bg-heavy {
-  @apply bg-gray-50 dark:bg-gray-900 shadow;
-  @apply text-gray-950 dark:text-gray-100;
-}
+  .bg-heavy {
+    @apply bg-gray-50 dark:bg-gray-900 shadow;
+    @apply text-gray-950 dark:text-gray-100;
+  }
 
-.bg-darker::before {
-  position: absolute;
-  inset: 0;
-  z-index: 10;
-  content: "";
-  background: var(--darken);
-}
+  .bg-darker::before {
+    position: absolute;
+    inset: 0;
+    z-index: 10;
+    content: "";
+    background: var(--darken);
+  }
 
-.bg-image {
-  z-index: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+  .bg-image {
+    z-index: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
-/* pill */
+  /* pill */
 
-.pill-sm {
-  @apply px-2 py-0.5 text-[13px] rounded;
-}
+  .pill-sm {
+    @apply px-2 py-0.5 text-[13px] rounded;
+  }
 
-.pill-lg {
-  @apply px-4 py-2 text-[1rem] rounded-[2rem];
-}
+  .pill-lg {
+    @apply px-4 py-2 text-[1rem] rounded-[2rem];
+  }
 
-.pill-xl {
-  @apply px-5 py-3 text-[1.5rem] rounded-[2rem];
-}
+  .pill-xl {
+    @apply px-5 py-3 text-[1.5rem] rounded-[2rem];
+  }
 
-.pill {
-  @apply font-semibold shadow;
-  background-color: var(--tag-color, var(--ghost-accent-color));
-  display: inline-block;
-  vertical-align: middle;
-}
+  .pill {
+    @apply font-semibold shadow;
+    background-color: var(--tag-color, var(--ghost-accent-color));
+    display: inline-block;
+    vertical-align: middle;
+  }
 
-.pill-clear {
-  background-color: transparent;
-}
+  .pill-clear {
+    background-color: transparent;
+  }
 
-.pill,
-.pill > * {
-  @apply text-gray-950 !important;
-  display: inline-block;
-}
+  .pill,
+  .pill > * {
+    @apply text-gray-950 !important;
+    display: inline-block;
+  }
 
-.pill svg {
-  @apply me-2 h-[24px];
-  vertical-align: top;
+  .pill svg {
+    @apply me-2 h-[24px];
+    vertical-align: top;
+  }
 }
